--- a/.forestry/front_matter/templates/text-column.yml
+++ b/.forestry/front_matter/templates/text-column.yml
@@ -15,3 +15,16 @@ fields:
     wysiwyg: true
     schema:
       format: html
+- type: field_group
+  name: cta
+  label: Call-to-action
+  fields:
+  - type: boolean
+    name: enabled
+    label: Enabled
+  - type: text
+    name: url
+    label: url
+  - type: text
+    name: button_text
+    label: Button text
