--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Hanzisize is a browser extension that allows selective resizing of 
   according to the language selected by the user.
 baseurl: '/hanzisize-about'
 url: 'https://rjpeterson.github.io'
-root: /
+root: '/hansizize-about'
 defaults:
 - scope:
     path: ''
