--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ email: hanzisizeextension@gmail.com
 description: Hanzisize is a browser extension that allows selective resizing of text
   according to the language selected by the user.
 baseurl: '/hanzisize-about'
-url: 'https://rjpeterson.github.io'
-root: '/hansizize-about'
+url: 'https://rjpeterson.github.io/hanzisize-about'
+root: '/'
 defaults:
 - scope:
     path: ''
