fix css, fix my3columntext.yml

--- a/.forestry/front_matter/templates/my-3-column-text.yml
+++ b/.forestry/front_matter/templates/my-3-column-text.yml
@@ -7,10 +7,10 @@ fields:
   type: text
   config:
     required: false
-  label: block
-  hidden: true
+  label: header
+  hidden: false
   default: my-3-column-text-1
-- name: column-1
+- name: col_1
   type: field_group
   config: {}
   fields:
@@ -20,7 +20,7 @@ fields:
     template: text-column
     label: Column
   label: Column 1
-- name: column_2
+- name: col_2
   type: field_group
   config: {}
   fields:
@@ -30,7 +30,7 @@ fields:
     template: text-column
     label: Column
   label: Column 2
-- name: column_3
+- name: col_3
   type: field_group
   config: {}
   fields:
